assets/css/style.css
 @import url('https://fonts.googleapis.com/css?family=Roboto:400|Exo:300,400,500,800');

 /* --------------------------Special paddings, margins and styling */

 html,
 body {
  overflow-x: hidden;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
 }

 .row {
  margin: 0px;
  padding: 0px;
 }

 h4 {
  margin: 0;
  font-size: 14px;
 }

 .container-fluid {
  padding-left: 0px;
  padding-right: 0px;
  width: 100%;
  background-color: lightgray;
 }

 img {
  height: 35px;
 }

 /* -------------------------------------------Navigation */

 #nav {
  margin: 0;
  padding: 0;
 }

 #nav li {
  padding: 0;
 }

 #navbar {
  border: 0;
  padding: 0;
  margin: 0px;
 }

 .menuitem {
  height: 50px;
  width: 20%;
  margin-right: 0;
  display: flex;
  text-align: center;
  padding: 0;
 }

 .menuitem a {
  width: 100%;
  text-decoration: none;
  color: black;
  height: 50px;
  -webkit-text-stroke-width: 1px;
 }

 .menuitem a i {
  padding-top: 12px;
  display: block;
  color: #fafafa;
  font-size: 14px;
 }

 .menuitem span {
  display: block;
  width: 100%;
  padding-top: 5px;
  text-align: center;
  justify-content: center;
  font-size: 11px;
  font-weight: 400;
 }

 .list-inline {
  display: flex;
  text-align: center;
  justify-content: center;
 }


 /*-----------------------------------------------Navbar*/

 .container-fluid>.navbar-header {
  margin-left: 0px;
  margin-right: 0px;
 }

 .navbar-default .navbar-nav>li>a {
  color: white;
 }

 .navbar-default .navbar-collapse {
  border-color: transparent;
 }

 .navbar-default .navbar-toggle {
  border: 0;
 }

 .navbar-default .navbar-toggle:hover {
  background-color: transparent;
 }

 .navbar-default .navbar-toggle .icon-bar {
  background-color: black;
 }

 .navbar-default .navbar-nav a {
  font-weight: bold;
 }

 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
  color: white;
  background: transparent;
 }

 .navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li>a:hover {
  color: white;
 }

 .hvr-sweep-to-bottom:before {
  background: rgba(0, 0, 0, 0.5);
  height: 50px;
 }

 .navbar {
  margin-bottom: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  background-color: transparent;
  border-color: #fafafa;
  border: 0;
 }

 .navbar-header .navbar-brand {
  font-family: "Roboto", sans-serif;
  font-size: 25px;
  font-weight: 400;
  padding-right: 10px;
  color: black;
  padding-left: 40px;
  -webkit-text-stroke-width: 2px;
 }

 .navbar-header .navbar-brand:hover {
  color: white;
 }

 .navbar .navbar-brand:hover {
  color: white;
 }

 .navbar-header .navbar-nav>li>a {
  color: white;
 }

 .navbar-header .navbar-collapse {
  border-color: transparent;
 }

 .navbar-header .navbar-toggle {
  border: 0;
 }

 .navbar-header .navbar-toggle:hover {
  background-color: transparent;
 }

 .navbar-header .navbar-toggle .icon-bar {
  background-color: black;
 }

 .navbar-header .navbar-nav a {
  font-weight: bold;
 }

 .navbar-header .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
  color: white;
  background: transparent;
 }

 .navbar-header .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li>a:hover {
  color: white;
 }


 /* -------------------------------------------Map */

 /* Set the size of the div element that contains the map */

 #map {
  width: 100%;
  height: 75vh;
 }

 .container-search {
  display: flex;
  text-align: center;
  justify-content: center;
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 40vh;
 }

 .map-image {
  background: url("../images/map.png") no-repeat center;
  background-size: cover;
  width: 100%;
 }

 /* ------------------------------------------------Colors */

 .footer-bg {
  background-color: grey;
 }

 .nav-bg {
  background-color: #f9c9d1;
 }

 .pink-color-itinerary {
  background-color: lightpink;
 }

 .blue-color-itinerary {
  background-color: lightblue;
 }

 .nav-color {
  background-color: #f9c9d1;
 }

 /* Buttons */

 .btn.btn-secondary {
  margin-top: 20px;
  margin-bottom: 20px;
 }

 /* -----------------------------------------------jQuery */

 /* Added special margins for places when toggling on mobile */

 .placesMargins {
  margin-top: 45px;
 }
 
 .navbarFixed {
  width: 100%;
  position: fixed;
  top: 0;
 }
 
 /* ----------------------------------------------------Destinations */

 .destination {
  display: flex;
  text-align: center;
  justify-content: center;
  background-color: black;
  color: white;
  font-size: 20px;
  margin: 0px;
  padding: 10px;
 }

 /* -------------------------------------------------------------Images */

 .image-section-1 {
  height: 360px;
  background: url("../images/UK.png") no-repeat;
  background-size: cover;
  padding: 0;
 }

 .image-section-2 {
  height: 360px;
  background: url("../images/USA.png") no-repeat;
  background-size: cover;
  padding: 0;
 }

 .image-section-3 {
  height: 360px;
  background: url("../images/Sibiu.png") no-repeat;
  background-size: cover;
  padding: 0;
 }

 .image-section-4 {
  height: 360px;
  background: url("../images/AUS.png") no-repeat;
  background-size: cover;
  padding: 0;
 }

 /* --------------------------------------------------------------Itinerary */

 .uppercase {
  text-transform: uppercase;
 }

 .text-section .section-column {
  justify-content: center;
  padding: 0;
  padding: 0 30px 30px;
  float: none;
  display: table-row;
 }

 .row-table {
  display: table-row;
 }

 .heading {
  font-family: "Exo", sans-serif;
  font-weight: 300;
  margin-top: 25px;
  color: #000000;
 }

 /*----------------------------------------------------------------------------------------Itinerary Items*/

 .itinerary-item {
  padding: 4em 2em 0em 2em;
  position: relative;
  color: gray;
  border-left: 1px solid;
 }

 .itinerary-item::before {
  content: attr(title);
  position: absolute;
  left: 2em;
  top: 2.3em;
  display: block;
  font-family: "Exo", sans-serif;
  font-weight: 800;
  font-size: 1em;
  padding: 0;
  color: black;
 }

 .itinerary-item::after {
  width: 12px;
  height: 12px;
  display: block;
  top: 2.4em;
  position: absolute;
  left: -6px;
  border-radius: 12px;
  content: '';
  background: black;
 }

 .itinerary-items {
  margin-bottom: 30px;
 }

 /* -------------------------------------------------------------------------------Contact Form */

 .contact {
  display: flex;
  text-align: center;
  justify-content: center;
  background-color: lightgray;
  color: black;
  font-size: 20px;
  margin: 0px;
  padding: 20px;
 }

 .center-form {
  displaY: flex;
  text-align: center;
  justify-content: center;
 }

 #form {
  margin-top: 20px;
 }

 #form>input {
  margin-top: 15px;
  margin-bottom: 15px;
  width: 75vw;
  height: 30px;
 }

 #form>textarea {
  height: 80px;
  width: 75vw;
 }

 /* -------------------------------------------------Footer */

 #footer {
  width: 100%;
  color: white;
  height: 100px;
  display: flex;
  justify-content: center;
  text-align: center;
 }

 .col-lg-12 {
  margin-top: 50px;
 }

 /* -------------------------------------------------------------------------------Media Queries */

 @media (min-width: 768px) {
  
  .menuitem {
   width: 14%;
   height: 40px;
  }
  
  .menuitem span {
   font-size: 14px;
  }
  
  #form>input {
   width: 50vw;
  }

  #form>textarea {
   width: 50vw;
  }
  
  #places {
   margin-top: 0px;
  }

  #map {
   margin-top: -90vh;
   margin-left: 50%;
   height: 90vh;
   width: 50vw;
  }

  .container-search {
   width: 50%;
   height: 90vh;
  }

 }

 @media (min-width: 992px) {
  
  .image-section-1 {
   min-height: 555px;
  }
  
  .image-section-2 {
   min-height: 555px;
  }
  
  .image-section-3 {
   min-height: 555px;
  }
  
  .image-section-4 {
   min-height: 555px;
  }
  
 }

 @media (min-width: 1200px) {
  
  .row-reverse {
   display: flex;
   flex-direction: row-reverse;
  }
  
 }
 

